flash_defconfig: Enable CONFIG_DISABLE_TRACE_PRINTK
* Poorly made kernel trees often use trace_printk() without
  properly guarding them in a #ifdef macro.
  Such usage of trace_printk() causes a warning at
  boot and additional memory allocation.

  This option serves to disable those all at once with ease. https://github.com/ahmedradaideh/OnePlus3T/commit/be0c0fa4e5269d39fbd9c8c9e70b02cd5d5d177c

Signed-off-by: ahmedradaideh <ahmed.radaideh@gmail.com>

--- a/arch/arm64/configs/flash_defconfig
+++ b/arch/arm64/configs/flash_defconfig
@@ -3979,6 +3979,7 @@ CONFIG_OEM_DEBUG_SUPORT=y
 CONFIG_OEM_TRACE_SUPORT=y
 CONFIG_DEFRAG_HELPER=y
 CONFIG_OEM_FORCE_DUMP=y
+CONFIG_DISABLE_TRACE_PRINTK=y
 
 #
 # Firmware Drivers
