--- a/arch/arm64/configs/flash_defconfig
+++ b/arch/arm64/configs/flash_defconfig
@@ -501,6 +501,7 @@ CONFIG_CPU_PM=y
 # CONFIG_DEDUCE_WAKEUP_REASONS is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 
 #
 # CPU Power Management
