--- a/arch/arm64/configs/flash_defconfig
+++ b/arch/arm64/configs/flash_defconfig
@@ -2199,6 +2199,7 @@ CONFIG_QPNP_SMBCHARGER=y
 CONFIG_QPNP_FG=y
 CONFIG_FG_BQ27541=y
 CONFIG_ONEPLUS_FASTCHG=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_QPNP_FG_GEN3 is not set
 CONFIG_BATTERY_BCL=y
 # CONFIG_QPNP_VM_BMS is not set
