--- a/arch/arm64/configs/flash_defconfig
+++ b/arch/arm64/configs/flash_defconfig
@@ -236,7 +236,7 @@ CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
-CONFIG_ARCH_MMAP_RND_BITS=18
+CONFIG_ARCH_MMAP_RND_BITS=24
 CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_CLONE_BACKWARDS=y
@@ -451,7 +451,7 @@ CONFIG_SETEND_EMULATION=y
 #
 # ARMv8.1 architectural features
 #
-# CONFIG_ARM64_PAN is not set
+CONFIG_ARM64_PAN=y
 CONFIG_ARM64_UAO=y
 
 #
@@ -3707,7 +3707,7 @@ CONFIG_WLAN_FEATURE_NAN_DATAPATH=y
 CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
 # CONFIG_WLAN_SYNC_TSF is not set
-CONFIG_WLAN_FEATURE_MEMDUMP=y
+# CONFIG_WLAN_FEATURE_MEMDUMP is not set
 CONFIG_WLAN_OFFLOAD_PACKETS=y
 CONFIG_QCA_WIFI_AUTOMOTIVE_CONC=y
 CONFIG_WLAN_UDP_RESPONSE_OFFLOAD=y
@@ -3836,7 +3836,7 @@ CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_UE=y
 # CONFIG_MSM_L2_IA_DEBUG is not set
 CONFIG_MSM_RPM_SMD=y
 # CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
-CONFIG_MSM_RPM_LOG=y
+# CONFIG_MSM_RPM_LOG is not set
 CONFIG_MSM_RPM_STATS_LOG=y
 CONFIG_MSM_RUN_QUEUE_STATS=y
 CONFIG_MSM_SCM=y
