flash_defconfig: remove unused kernel functions again
* This helps to speed boot up and Reduce kernel size and also shrink attack surface.

* Test: Boot OnePlus3/3t

Signed-off-by: ahmedradaideh <ahmed.radaideh@gmail.com>

--- a/arch/arm64/configs/flash_defconfig
+++ b/arch/arm64/configs/flash_defconfig
@@ -1196,7 +1196,7 @@ CONFIG_UID_SYS_STATS=y
 CONFIG_TUSB320_TYPE_C=y
 CONFIG_FUSB301_TYPE_C=y
 CONFIG_PTN5150_TYPE_C=y
-CONFIG_TI_DRV2667=y
+# CONFIG_TI_DRV2667 is not set
 # CONFIG_QPNP_MISC is not set
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
@@ -1205,7 +1205,7 @@ CONFIG_TI_DRV2667=y
 #
 # EEPROM support
 #
-CONFIG_EEPROM_AT24=y
+# CONFIG_EEPROM_AT24 is not set
 # CONFIG_EEPROM_AT25 is not set
 # CONFIG_EEPROM_LEGACY is not set
 # CONFIG_EEPROM_MAX6875 is not set
@@ -1262,7 +1262,7 @@ CONFIG_BLK_DEV_SD=y
 # CONFIG_CHR_DEV_OSST is not set
 # CONFIG_BLK_DEV_SR is not set
 CONFIG_CHR_DEV_SG=y
-CONFIG_CHR_DEV_SCH=y
+# CONFIG_CHR_DEV_SCH is not set
 CONFIG_SCSI_CONSTANTS=y
 CONFIG_SCSI_LOGGING=y
 CONFIG_SCSI_SCAN_ASYNC=y
@@ -1891,7 +1891,7 @@ CONFIG_UNIX98_PTYS=y
 #
 # Serial drivers
 #
-CONFIG_SERIAL_EARLYCON=y
+# CONFIG_SERIAL_EARLYCON is not set
 # CONFIG_SERIAL_8250 is not set
 
 #
@@ -1904,7 +1904,7 @@ CONFIG_SERIAL_EARLYCON=y
 # CONFIG_SERIAL_MAX310X is not set
 # CONFIG_SERIAL_MFD_HSU is not set
 CONFIG_SERIAL_CORE=y
-CONFIG_SERIAL_CORE_CONSOLE=y
+# CONFIG_SERIAL_CORE_CONSOLE is not set
 # CONFIG_SERIAL_JSM is not set
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HSL=y
@@ -2588,15 +2588,15 @@ CONFIG_MSM_EEPROM=y
 CONFIG_MSM_ISPIF=y
 # CONFIG_MSM_ISPIF_V1 is not set
 # CONFIG_MSM_ISPIF_V2 is not set
-CONFIG_IMX134=y
-CONFIG_IMX132=y
-CONFIG_OV9724=y
-CONFIG_OV5648=y
-CONFIG_GC0339=y
-CONFIG_OV8825=y
-CONFIG_OV8865=y
-CONFIG_s5k4e1=y
-CONFIG_OV12830=y
+# CONFIG_IMX134 is not set
+# CONFIG_IMX132 is not set
+# CONFIG_OV9724 is not set
+# CONFIG_OV5648 is not set
+# CONFIG_GC0339 is not set
+# CONFIG_OV8825 is not set
+# CONFIG_OV8865 is not set
+# CONFIG_s5k4e1 is not set
+# CONFIG_OV12830 is not set
 CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
@@ -3149,7 +3149,7 @@ CONFIG_USB_DEFAULT_PERSIST=y
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_OTG_FSM is not set
-CONFIG_USB_MON=y
+# CONFIG_USB_MON is not set
 # CONFIG_USB_WUSB_CBAF is not set
 
 #
@@ -3159,7 +3159,7 @@ CONFIG_USB_MON=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PCI=y
 CONFIG_USB_XHCI_PLATFORM=y
-CONFIG_USB_EHCI_HCD=y
+# CONFIG_USB_EHCI_HCD is not set
 # CONFIG_USB_EHCI_ROOT_HUB_TT is not set
 CONFIG_USB_EHCI_TT_NEWSCHED=y
 CONFIG_USB_EHCI_PCI=y
@@ -3673,7 +3673,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
-CONFIG_SW_SYNC_USER=y
+# CONFIG_SW_SYNC_USER is not set
 CONFIG_ONESHOT_SYNC=y
 # CONFIG_ONESHOT_SYNC_USER is not set
 CONFIG_ION=y
@@ -4046,7 +4046,7 @@ CONFIG_FUSE_FS=y
 # DOS/FAT/NT Filesystems
 #
 CONFIG_FAT_FS=y
-CONFIG_MSDOS_FS=y
+# CONFIG_MSDOS_FS is not set
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
